--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@types/cron": "^2.0.0",
     "@types/jquery": "^3.5.14",
     "@types/moment": "^2.13.0",
     "@wikimedia/types-wikimedia": "^0.3.4",
