--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
     "@types/cron": "^2.0.0",
     "@types/jquery": "^3.5.14",
     "@types/moment": "^2.13.0",
     "@wikimedia/types-wikimedia": "^0.3.4",
-    "axios": "^0.27.2",
     "eslint": "^8.18.0"
   }
 }
