--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,13 @@ name: test
 on:
   push:
     branches: [master]
+    paths:
+      - "src/**"
   pull_request:
     branches: [master]
+    paths:
+      - "src/**"
+  workflow_dispatch:
 
 jobs:
   test:
