fix(deletion): 修正因站点链接格式变更带来的问题

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "outDir": "dist/",
         "alwaysStrict": true,
         "strict": true,
+        "downlevelIteration": true
     },
     "include": [
         "src",
