--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,12 +24,12 @@ jobs:
           cache: npm
       - name: Install eslint
         run: npm install --location=global eslint@latest
-      - name: Check eslint installation
-        run: npx eslint --env-info
       - name: Reload the cache of eslint
         uses: actions/cache@v3
         with:
           path: .eslintcache
           key: eslint
+      - name: Check eslint environment
+        run: npx eslint --env-info && ls -lh
       - name: Check the linter
         run: npx eslint --exit-on-fatal-error --max-warnings 0 --cache --cache-strategy content --ext js ./src
