ci: Rename the cache key

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: .eslintcache
-          key: eslint
+          key: eslintcache
       - name: Check eslint environment
         run: npx eslint --env-info && ls -lhA
       - name: Check the linter
