--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -31,5 +31,9 @@ jobs:
           key: eslintcache
       - name: Check eslint environment
         run: npx eslint --env-info && ls -lhA
+      - uses: technote-space/get-diff-action@v6
+        name: List diff
+        with:
+          PATTERNS: src/**/*.js
       - name: Run the linter
         run: npx eslint --exit-on-fatal-error --max-warnings 0 --cache --cache-strategy content --ext js ./src
