--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/jquery": "^3.5.14",
     "@types/moment": "^2.13.0",
     "@wikimedia/types-wikimedia": "^0.3.4",
-    "eslint": "^8.18.0"
+    "eslint": "^8.18.0",
+    "strip-json-comments": "^5.0.0"
   }
 }
