--- a/.github/workflows/Conventional Commits.yml
+++ b/.github/workflows/Conventional Commits.yml
@@ -19,6 +19,8 @@ jobs:
           cache: npm
       - uses: technote-space/get-diff-action@v6
         name: List diff
+      - name: Install dependencies
+        run: npm ci
       - name: Run the generator
         run: node scripts/conventionalCommitsScopesGenerator.js
       - uses: EndBug/add-and-commit@v9
