--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
     "@types/jquery": "^3.5.14",
     "@types/moment": "^2.13.0",
     "@wikimedia/types-wikimedia": "^0.3.4",
+    "browser-pack-flat": "^3.5.0",
+    "browserify": "^17.0.0",
+    "common-shakeify": "^1.1.1",
+    "cron": "^2.1.0",
+    "envify": "^4.1.0",
     "eslint": "^8.18.0",
-    "strip-json-comments": "^5.0.0"
+    "strip-json-comments": "^5.0.0",
+    "unassertify": "^3.0.1"
   }
 }
