ci: Change on.push.paths
*： 匹配零个或多个字符，但不匹配 / 字符。

--- a/.github/workflows/browserify.yml
+++ b/.github/workflows/browserify.yml
@@ -3,7 +3,7 @@ name: Auto browserify generator
 on:
   push:
     paths:
-      - "scripts/browserif*.js"
+      - "scripts/browserify*.js"
   workflow_dispatch:
   schedule:
     - cron: 0 0 * * *
