--- a/.github/workflows/Conventional Commits.yml
+++ b/.github/workflows/Conventional Commits.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run the generator
-        run: node scripts/conventionalCommitsScopesGenerator.js
+        run: node scripts/conventionalCommitsScopesGenerator.js && echo "git status" && git status
       - uses: EndBug/add-and-commit@v9
         with:
           add: ".vscode"
