--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
     "@types/jquery": "^3.5.14",
     "@types/moment": "^2.13.0",
     "@wikimedia/types-wikimedia": "^0.3.4",
+    "async-lock": "^1.3.2",
+    "axios": "^0.27.2",
     "browser-pack-flat": "^3.5.0",
     "browserify": "^17.0.0",
     "common-shakeify": "^1.1.1",
     "cron": "^2.1.0",
     "envify": "^4.1.0",
     "eslint": "^8.18.0",
+    "esmify": "^2.1.1",
+    "hash-wasm": "^4.9.0",
+    "ip": "^1.1.8",
+    "localforage": "^1.10.0",
+    "minify-stream": "^2.1.0",
     "strip-json-comments": "^5.0.0",
     "unassertify": "^3.0.1"
   }
