--- a/.github/workflows/prefetch.yml
+++ b/.github/workflows/prefetch.yml
@@ -4,9 +4,12 @@ on:
   push:
     paths:
       - "scripts/prefetch*.js"
+      - ".github/workflows/prefetch.yml"
   workflow_dispatch:
   schedule:
     - cron: 0 0 * * *
+
+concurrency: postCommit
 jobs:
   test:
     runs-on: ubuntu-latest
