--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -5,6 +5,7 @@ on:
     branches: [master]
     paths:
       - "src/**"
+      - ".github/workflows/Linter test.yml"
   pull_request:
     branches: [master]
     paths:
