--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/moment": "^2.13.0",
     "@wikimedia/types-wikimedia": "^0.3.4",
     "async-lock": "^1.3.2",
+    "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
     "browser-pack-flat": "^3.5.0",
     "browserify": "^17.0.0",
@@ -17,7 +18,11 @@
     "ip": "^1.1.8",
     "localforage": "^1.10.0",
     "minify-stream": "^2.1.0",
+    "postcss": "^8.4.16",
+    "postcss-cli": "^10.0.0",
     "strip-json-comments": "^5.0.0",
+    "stylelint": "^14.11.0",
+    "stylelint-config-standard": "^28.0.0",
     "unassertify": "^3.0.1"
   }
 }
