--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -25,14 +25,16 @@ jobs:
           cache: npm
       - name: Install dependencies
         run: npm ci
-      - name: Reload the cache of eslint
+      - name: Reload the cache
         uses: actions/cache@v3
         with:
-          path: .eslintcache
-          key: eslintcache
+          path: .cache
+          key: cache
       - name: Check eslint environment
         run: npx eslint --env-info && ls -lhA
       - uses: technote-space/get-diff-action@v6
         name: List diff
-      - name: Run the linter
-        run: npx eslint --exit-on-fatal-error --max-warnings 0 --cache --cache-strategy content --ext js ./src
+      - name: Run eslint
+        run: npx eslint --exit-on-fatal-error --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" --ext js ./src
+      - name: Run stylelint
+        run: npx stylelint --max-warnings 0 --cache --cache-location ".cache/" "src/**/*.css"
