--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -57,6 +57,15 @@ jobs:
           default_author: github_actor
           message: "auto: auto prefetch - commit from GitHub Actions"
           push: false
+      - name: Run "Gadgets-definition Generator"
+        run: node scripts/gadgetsDefinitionGenerator.js
+      - uses: EndBug/add-and-commit@v9
+        with:
+          committer_name: GitHub Actions
+          committer_email: actions@github.com
+          default_author: github_actor
+          message: "auto: Gadgets-definition Generator - commit from GitHub Actions"
+          push: false
       - name: Show git status
         run: git status
       - name: git push
