ci: Change pattern

--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -4,9 +4,7 @@ on:
   push:
     paths:
       - "src/**"
-      - "scripts/browserify*.js"
-      - "scripts/conventionalCommitsScopesGenerator.js"
-      - "scripts/prefetch*.js"
+      - "scripts/*.js"
       - "package-lock.json"
       - ".github/workflows/postCommit.yml"
   workflow_dispatch:
