ci: Watch code only

--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -3,7 +3,9 @@ name: post commit CI
 on:
   push:
     paths:
-      - "src/**"
+      - "src/**/*.js"
+      - "src/**/*.css"
+      - "src/**/*.json"
       - "scripts/*.js"
       - "package-lock.json"
       - ".github/workflows/postCommit.yml"
