--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,9 @@
         "ecmaVersion": "latest"
     },
     "extends": "eslint:recommended",
+    "ignorePatterns": [
+        "dist/"
+    ],
     "globals": {
         "mw": "readonly",
         "mediaWiki": "readonly",
