ci: Remove broken steps

--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -66,19 +66,8 @@ jobs:
           default_author: github_actor
           message: "auto: Gadgets-definition Generator - commit from GitHub Actions"
           push: false
-      - name: Show git status
-        run: git pull ; git status
-      - uses: technote-space/get-diff-action@v6
-        name: List diff again
-        id: ifChange
-        with:
-          PATTERNS: src/**
-      - name: git push
-        run: git push
-        if: steps.ifChange.output.GIT_DIFF_FILTERED[0] != null
-      - name: trigger linter test
-        if: steps.ifChange.output.GIT_DIFF_FILTERED[0] != null && github.ref_name == 'master'
-        uses: benc-uk/workflow-dispatch@v1
-        with:
-          workflow: Linter test
-          token: ${{ secrets.PAT }}
+      - name: Show git status & push
+        run: |
+          git pull
+          git status
+          git push
