--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: technote-space/get-diff-action@v6
         name: List diff
       - name: Run eslint
-        run: npx eslint --exit-on-fatal-error --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" --ext js,json ./src
+        run: npx eslint --exit-on-fatal-error --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" --ext js ./src
       - name: Run stylelint
         run: npx stylelint --max-warnings 0 --cache --cache-location ".cache/" "src/**/*.css"
       - name: Run v8r
