--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
-  "dependencies": {
-    "@types/cron": "^2.0.0",
-    "@types/jquery": "^3.5.14",
-    "@types/moment": "^2.13.0",
-    "@wikimedia/types-wikimedia": "^0.3.4",
-    "async-lock": "^1.3.2",
-    "autoprefixer": "^10.4.8",
-    "axios": "^0.27.2",
-    "browser-pack-flat": "^3.5.0",
-    "browserify": "^17.0.0",
-    "common-shakeify": "^1.1.1",
-    "cron": "^2.1.0",
-    "envify": "^4.1.0",
-    "eslint": "^8.18.0",
-    "esmify": "^2.1.1",
-    "hash-wasm": "^4.9.0",
-    "ip": "^1.1.8",
-    "localforage": "^1.10.0",
-    "minify-stream": "^2.1.0",
-    "postcss": "^8.4.16",
-    "postcss-cli": "^10.0.0",
-    "strip-json-comments": "^5.0.0",
-    "stylelint": "^14.11.0",
-    "stylelint-config-standard": "^28.0.0",
-    "unassertify": "^3.0.1",
-    "v8r": "^0.13.0"
-  }
+    "name": "moegirlpediainterfacecodes",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/MoegirlPediaInterfaceAdmins/MoegirlPediaInterfaceCodes.git"
+    },
+    "engines": {
+        "node": ">=16.17"
+    },
+    "dependencies": {
+        "@types/cron": "^2.0.0",
+        "@types/jquery": "^3.5.14",
+        "@types/moment": "^2.13.0",
+        "@wikimedia/types-wikimedia": "^0.3.4",
+        "async-lock": "^1.3.2",
+        "autoprefixer": "^10.4.8",
+        "axios": "^0.27.2",
+        "browser-pack-flat": "^3.5.0",
+        "browserify": "^17.0.0",
+        "common-shakeify": "^1.1.1",
+        "cron": "^2.1.0",
+        "envify": "^4.1.0",
+        "eslint": "^8.18.0",
+        "esmify": "^2.1.1",
+        "hash-wasm": "^4.9.0",
+        "ip": "^1.1.8",
+        "localforage": "^1.10.0",
+        "minify-stream": "^2.1.0",
+        "postcss": "^8.4.16",
+        "postcss-cli": "^10.0.0",
+        "strip-json-comments": "^5.0.0",
+        "stylelint": "^14.11.0",
+        "stylelint-config-standard": "^28.0.0",
+        "unassertify": "^3.0.1",
+        "v8r": "^0.13.0"
+    }
 }
