--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "strip-json-comments": "^5.0.0",
         "stylelint": "^14.11.0",
         "stylelint-config-standard": "^28.0.0",
+        "typescript": "^4.8.2",
         "unassertify": "^3.0.1",
         "v8r": "^0.13.0"
     }
