--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
         "stylelint": "^14.11.0",
         "stylelint-config-standard": "^28.0.0",
         "typescript": "^4.8.2",
-        "unassertify": "^3.0.1",
-        "v8r": "^0.13.0"
+        "unassertify": "^3.0.1"
     }
 }
