--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -67,6 +67,15 @@ jobs:
           default_author: github_actor
           message: "auto: Gadgets-definition Generator - commit from GitHub Actions"
           push: false
+      - name: Run "Gadget-polyfill generator"
+        run: node scripts/generatePolyfill.js
+      - uses: EndBug/add-and-commit@v9
+        with:
+          committer_name: GitHub Actions
+          committer_email: actions@github.com
+          default_author: github_actor
+          message: "auto: Gadget-polyfill generator - commit from GitHub Actions"
+          push: false
       - name: Show git status & push
         run: |
           git pull
