--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "minify-stream": "^2.1.0",
         "postcss": "^8.4.16",
         "postcss-cli": "^10.0.0",
+        "postcss-discard-comments": "^5.1.2",
         "strip-json-comments": "^5.0.0",
         "stylelint": "^14.11.0",
         "stylelint-config-standard": "^28.0.0",
