--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
         "Cron": "readonly"
     },
     "rules": {
+        "prefer-reflect": "error",
         "no-new-func": "error",
         "no-new-object": "error",
         "no-new-wrappers": "error",
