ci: Watch more files

--- a/.github/workflows/postCommit.yml
+++ b/.github/workflows/postCommit.yml
@@ -3,7 +3,7 @@ name: post commit CI
 on:
   push:
     paths:
-      - "scripts/*.js"
+      - "scripts/**/*.js"
       - "package-lock.json"
       - ".github/workflows/postCommit.yml"
   workflow_dispatch:
