chore: Eslint won't fix it
https://github.com/eslint/eslint/issues/16305#issuecomment-1246451848

--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,14 @@
         "Cron": "readonly"
     },
     "rules": {
-        "prefer-reflect": "error",
+        "prefer-reflect": [
+            "error",
+            {
+                "exceptions": [
+                    "getOwnPropertyNames"
+                ]
+            }
+        ],
         "no-new-func": "error",
         "no-new-object": "error",
         "no-new-wrappers": "error",
