ci: seems team can't be added as reviewer via REST

--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -3,13 +3,7 @@ addReviewers: true
 addAssignees: true
 
 reviewers:
-  - MoegirlPediaInterfaceAdmins/bureaucrat
-  - MoegirlPediaInterfaceAdmins/sysop
-
-numberOfReviewers: 0
+  - AnnAngela
 
 assignees:
-  - MoegirlPediaInterfaceAdmins/bureaucrat
-  - MoegirlPediaInterfaceAdmins/sysop
-
-numberOfAssignees: 0
+  - AnnAngela
