--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -36,8 +36,14 @@ jobs:
           key: cache
       - uses: technote-space/get-diff-action@v6
         name: List diff
-      - name: Run actions
-        run: node scripts/workflows/linterTest.js
+      - name: Check eslint environment
+        run: npx eslint --env-info && ls -lhA .cache
+      - name: Run eslint
+        run: npx eslint --exit-on-fatal-error --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" --ext js ./src
+      - name: Run stylelint
+        run: npx stylelint --max-warnings 0 --cache --cache-location ".cache/" "src/**/*.css"
+      - name: Run v8r
+        run: npx -y v8r@latest src/**/definition.json --schema .vscode/json-schemas/gadget-definition.json
       - name: Trigger post commit CI
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: actions/github-script@v6
