--- a/.github/workflows/Linter test.yml
+++ b/.github/workflows/Linter test.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Run eslint
         run: npx eslint --exit-on-fatal-error --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" --ext js ./src
       - name: Run stylelint
-        run: npx stylelint --max-warnings 0 --cache --cache-location ".cache/" "src/**/*.css"
+        run: npx stylelint --max-warnings 0 --cache --cache-strategy content --cache-location ".cache/" "src/**/*.css"
       - name: Run v8r
         run: npx -y v8r@latest src/**/definition.json --schema .vscode/json-schemas/gadget-definition.json
       - name: Trigger post commit CI
