--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -1,10 +1,7 @@
 name: "Auto Assign"
 on:
-  pull_request:
+  pull_request_target:
     types: [opened, ready_for_review]
-
-permissions:
-  pull-requests: write
 
 jobs:
   add-reviews:
