--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,12 @@
                 "src/gadgets/*/definition.json"
             ],
             "url": "./.vscode/json-schemas/gadget-definition.json"
+        },
+        {
+            "fileMatch": [
+                ".github/renovate.json"
+            ],
+            "url": "https://docs.renovatebot.com/renovate-schema.json"
         }
     ],
     "files.insertFinalNewline": true,
