ci: User renovate's dependency dashboard

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,6 +8,8 @@
     ],
     "commitBodyTable": true,
     "configMigration": true,
+    "dependencyDashboard": true,
+    "dependencyDashboardTitle": "Dependency Dashboard from renovate",
     "lockFileMaintenance": {
         "enabled": true,
         "recreateClosed": false,
