--- a/.eslintrc
+++ b/.eslintrc
@@ -128,6 +128,7 @@
         "prefer-template": "error",
         "prefer-rest-params": "error",
         "prefer-exponentiation-operator": "error",
-        "require-await": "error"
+        "require-await": "error",
+        "arrow-parens": "error"
     }
 }
