--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,8 @@
 {
     "extends": "stylelint-config-standard",
     "ignoreFiles": [
-        "src/gadgets/jquery.ui/MediaWiki:Gadget-jquery.ui.css"
+        "src/gadgets/jquery.ui/MediaWiki:Gadget-jquery.ui.css",
+        "dist/**/*.css"
     ],
     "rules": {
         "indentation": 4,
