--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "format": "eslint src --fix && stylelint src/**/*.css --fix"
     },
     "dependencies": {
+        "@csstools/postcss-is-pseudo-class": "^3.1.0",
         "@financial-times/js-features-analyser": "^0.4.3",
         "@types/cron": "^2.0.0",
         "@types/jquery": "^3.5.14",
@@ -36,6 +37,10 @@
         "postcss": "^8.4.19",
         "postcss-cli": "^10.0.0",
         "postcss-discard-comments": "^5.1.2",
+        "postcss-font-normalize": "^0.0.0",
+        "postcss-font-variant": "^5.0.0",
+        "postcss-selector-matches": "^4.0.0",
+        "postcss-selector-not": "^7.0.1",
         "strip-json-comments": "^5.0.0",
         "stylelint": "^14.15.0",
         "stylelint-config-standard": "^29.0.0",
