create gadget-userpagedelete (#89)
* Create MediaWiki:Gadget-userpageDelete.js
* Create definition.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,6 +113,7 @@
         "Gadget-UserMessages",
         "Gadget-usergroup",
         "Gadget-userpageCat",
+        "Gadget-userpageDelete",
         "Gadget-vector-styles",
         "Gadget-widgetPreload",
         "Gadget-wikiBlame",
