ci: strange env problem=。=

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,11 @@ updates:
       timezone: "Asia/Shanghai"
     commit-message:
       prefix: "npm"
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+      time: "08:15"
+      timezone: "Asia/Shanghai"
+    commit-message:
+      prefix: "github-actions"
