--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,8 @@
         "echarts": "readonly",
         "AsyncLock": "readonly",
         "MOE_SKIN_GLOBAL_DATA_REF": "readonly",
-        "Cron": "readonly"
+        "Cron": "readonly",
+        "ace": "readonly"
     },
     "rules": {
         "logical-assignment-operators": "error",
