feat(Gadget-MarkAsResolved): Remake with OOUI

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
         "jquery": true,
         "es6": true,
         "es2020": true,
-        "es2021": true
+        "es2021": true,
+        "es2022": true
     },
     "parserOptions": {
         "ecmaVersion": "latest"
