--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/cron": "^2.0.0",
         "@types/jquery": "^3.5.14",
         "@types/moment": "^2.13.0",
+        "@types/oojs-ui": "^0.46.1",
         "@wikimedia/types-wikimedia": "^0.3.4",
         "async-lock": "^1.4.0",
         "autoprefixer": "^10.4.13",
